kuber/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-http-service
spec:
  type: NodePort
  selector:
    app: simple-http-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
