kuber/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-http-server-entry-point
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "arch.homework"
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-http-service
            port:
              number: 8080
